@@ -28,6 +28,10 @@ earlier. See <a href="backend-queuedir.html">the <tt>queuedir</tt>
 backend</a> for more details on settings (prefixed
 by <tt>RBL_</tt>).</dd>
 
+<dt><tt>RBL_WHITELISTS</tt></dt> <dd>The list of RBL domain names to
+search for whitelist entries, separated by commas (<tt>,</tt>). If the
+IP is found in one of these lists, the blacklists are not consulted.</dd>
+    
 </dl>
 
 </body>
